# miller

./: .editorconfig  .gitattributes  .gitignore  .julieignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  FAST_REFS_GUIDE.md  FIXTURE_IMPLEMENTATION_SUMMARY.md  GET_SYMBOLS_GUIDE.md  Makefile  PLAN_ARROW_EXTRACTION.md  QUICKSTART.md  README.md  TODO.md  ULTRA_REVIEW_2025-11-20.md  VERIFICATION_RESULTS.md  benchmark_get_symbols.py  benchmark_reranker.py  check_device.py  llm_extracted_content.txt  pyproject.toml  pytest.ini  verify_extraction.py
.claude/: settings.local.json
.claude/agents/: python-tdd-refactor.md
.claude/commands/: checkpoint.md  plan.md  recall.md
.claude/skills/: development-memory.md  explore-codebase.md  plan-tracking.md  safe-refactor.md  semantic-intelligence.md  smart-search.md
.github/workflows/: ci.yml  wheels.yml
.julie/: .gitignore
.memories/2025-11-18/: 015858_2ebc.json  015858_2ebc.md  023056_914c.json  023056_914c.md  024606_28be.json  024606_28be.md  024948_7730.json  024948_7730.md  025538_3bca.json  025538_3bca.md  030526_f82e.json  030526_f82e.md  031000_eb95.json  031000_eb95.md  031940_2259.json  031940_2259.md  033413_0dd6.json  033413_0dd6.md  122031_3d95.json  122031_3d95.md  123301_e9f3.json  123301_e9f3.md  123809_ef1a.json  123809_ef1a.md  123937_50b0.json  123937_50b0.md  124215_de9a.json  124215_de9a.md  124348_36fc.json  124348_36fc.md  124902_6c4c.json  124902_6c4c.md  125257_ccae.json  125257_ccae.md  125434_fede.json  125434_fede.md  131643_037a.json  131643_037a.md  132517_615f.json  132517_615f.md  (+60 more)
.memories/2025-11-19/: 094800_10a2.json  094800_10a2.md  101046_eff2.json  101046_eff2.md  102626_8610.json  102626_8610.md  103053_6457.json  103053_6457.md  103624_daba.json  103624_daba.md  104012_70dc.json  104012_70dc.md  104854_8f47.json  104854_8f47.md  104938_0a69.json  104938_0a69.md  105807_c80f.json  105807_c80f.md  110423_ff4f.json  110423_ff4f.md  110955_1bc5.json  110955_1bc5.md  111650_43b4.json  111650_43b4.md  111650_cb1b.json  111650_cb1b.md  112410_6986.json  112410_6986.md  113413_1c2b.json  113413_1c2b.md  114450_f23d.json  114450_f23d.md  121023_19f9.json  121023_19f9.md  122349_727b.json  122349_727b.md  131950_43ff.json  131950_43ff.md  133420_53f5.json  133420_53f5.md  (+36 more)
.memories/2025-11-20/: 131441_df3e.json  131441_df3e.md  133003_f386.json  133003_f386.md  133401_683e.json  133401_683e.md  134329_06d9.json  134329_06d9.md  135231_9705.json  135231_9705.md  140618_267b.json  140618_267b.md  143714_6c59.json  143714_6c59.md  144744_f6d3.json  144744_f6d3.md  144942_879b.json  144942_879b.md  145419_b676.json  145419_b676.md  151411_93f8.json  151411_93f8.md  153944_a1ea.json  153944_a1ea.md  171523_45c9.json  171523_45c9.md  202250_8035.json  202250_8035.md  202717_2a94.json  202717_2a94.md  202957_8a7d.json  202957_8a7d.md  203929_c43b.json  203929_c43b.md  204610_9786.json  204610_9786.md  211815_cb6a.json  211815_cb6a.md  215930_9a26.json  215930_9a26.md
.memories/2025-11-21/: 085421_cf5f.json  085421_cf5f.md  092556_f75a.json  092556_f75a.md  150145_0d38.json  150145_0d38.md  150937_99ce.json  150937_99ce.md  173238_f46e.json  173238_f46e.md  173915_f4af.json  173915_f4af.md  202908_9821.json  202908_9821.md  215648_7752.json  215648_7752.md  220302_c268.json  220302_c268.md  220410_177e.json  220410_177e.md  220452_ddfd.json  220452_ddfd.md  222226_098a.json  222226_098a.md  223201_96e6.json  223201_96e6.md  225358_11a8.json  225358_11a8.md  231726_3f72.json  231726_3f72.md  232015_1ce6.json  232015_1ce6.md
.memories/2025-11-22/: 083831_8433.json  083831_8433.md  085115_1d7c.json  085115_1d7c.md  085959_bc3a.json  085959_bc3a.md  105200_5168.json  105200_5168.md  105801_9098.json  105801_9098.md  112457_c47a.json  112457_c47a.md  131537_59c373.json  131537_59c373.md  154256_1395.json  154256_1395.md  155507_e018.json  155507_e018.md  155622_6474.json  155622_6474.md  160055_25f5.json  160055_25f5.md  160752_02c8.json  160752_02c8.md  190940_f932.json  190940_f932.md  210429_3bc8.json  210429_3bc8.md
.memories/2025-11-23/: 084315_5b5b.json  084315_5b5b.md  101437_cee2.json  101437_cee2.md  110011_1c74.json  110011_1c74.md  110551_9fed.json  110551_9fed.md  121207_1e93.json  121207_1e93.md  122305_bce2.json  122305_bce2.md  123655_51fd.json  123655_51fd.md  124325_6d64.json  124325_6d64.md  132059_327d.json  132059_327d.md  133231_4a02.json  133231_4a02.md  134624_0aec.json  134624_0aec.md  140123_23cc.json  140123_23cc.md  141451_d559.json  141451_d559.md  142024_ed8a.json  142024_ed8a.md  143034_b3e8.json  143034_b3e8.md  154505_9ad0.json  154505_9ad0.md  182608_ec67.json  182608_ec67.md
.memories/2025-11-24/: 102434_4968.json  102434_4968.md  102503_3672.json  102503_3672.md  104003_b6ee.json  104003_b6ee.md  112050_e493.json  112050_e493.md  120551_d6c7.json  120551_d6c7.md  135457_b696.json  135457_b696.md  142556_4cc4.json  142556_4cc4.md  143832_8755.json  143832_8755.md  145026_e73d.json  145026_e73d.md  151353_073d.json  151353_073d.md  153258_467a.json  153258_467a.md  154255_570d.json  154255_570d.md  155624_53ff.json  155624_53ff.md  160653_3c5b.json  160653_3c5b.md  181052_dcb5.json  181052_dcb5.md  181730_841e.json  181730_841e.md  185215_bf8b.json  185215_bf8b.md  193359_041e.json  193359_041e.md  195316_f3c0.json  195316_f3c0.md  200609_2683.json  200609_2683.md  (+8 more)
.memories/2025-11-25/: 075957_4ee3.json  075957_4ee3.md  081352_a314.json  081352_a314.md  085353_9e7c.json  085353_9e7c.md  090124_5a2f.json  090124_5a2f.md  090246_f322.json  090246_f322.md  093542_cd70.json  093542_cd70.md  (+52 more)
docs/: COMPREHENSIVE-GUIDE.md  DEVELOPMENT.md  DISTRIBUTION.md  GEMINI_SUGGESTIONS.md  GPU_SETUP.md  LANGUAGES.md  PLAN.md  SEARCH_FOUNDATION_ANALYSIS.md  SEARCH_TOOL_DESIGN.md  STORAGE_DESIGN.md  TANTIVY_LANCEDB_RESEARCH.md  TOOLS_PLAN.md  TOOL_AUDIT_CHECKLIST.md  TOOL_AUDIT_FINDINGS.md  TOON.md
scripts/: benchmark_arrow_gc.py  extract_project_to_llm.ts
src/: graph.rs  language.rs  lib.rs  watcher.rs
test_samples/: app.js  lib.rs  user_manager.py
test_watcher_workspace/: test.py
(+527 files in other folders)
