[build-system]
# Maturin version verified via web search 2025-11-17: https://pypi.org/project/maturin/
# Latest: 1.10.1 (November 2025)
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "miller-core"
version = "0.1.0"
description = "Rust-powered code intelligence core for Miller MCP server"
requires-python = ">=3.12"
authors = [
    { name = "Miller Contributors" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "fastmcp>=2.0",
    "sentence-transformers>=2.0",
    "lancedb>=0.6",
    "pandas>=2.0",
    "torch>=2.0",
    "transformers>=4.53.0",  # Required for Jina-code-embeddings-0.5b (Qwen2.5 base)
    "einops>=0.7",           # Required for Jina/Qwen attention patterns
    "pathspec>=0.11",      # .gitignore parsing
    "watchdog>=6.0",       # File system monitoring (verified 2025-11-18: latest is 6.0.0)
    "tantivy>=0.25",       # Tantivy FTS for LanceDB (verified 2025-11-18: latest is 0.25.0)
    "toon-format>=0.9.0b1",  # TOON format for token-efficient LLM output (verified 2025-11-20: v0.9.0-beta.1)
    "pyyaml>=6.0",         # YAML frontmatter for markdown memories (verified 2025-11-26: latest is 6.0.2)
]

[project.scripts]
miller-server = "miller.server:main"
miller-server-http = "miller.server:main_http_cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-watch>=4.2",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "maturin>=1.7",
]

[tool.maturin]
# Maturin configuration for building Rust extension
python-source = "python"
module-name = "miller.miller_core"
features = ["pyo3/extension-module"]

[tool.black]
# Black formatter configuration
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude generated files
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
# Ruff linter configuration (replaces flake8, isort, etc.)
line-length = 100
target-version = "py39"

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]

ignore = [
    "E501",  # Line too long (black handles this)
]

[tool.ruff.per-file-ignores]
# Allow unused imports in __init__.py
"__init__.py" = ["F401"]
# Allow assertions in tests
"tests/**/*.py" = ["S101"]

[tool.mypy]
# Type checking configuration
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
# Ignore missing type stubs for third-party packages
module = [
    "lancedb.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true
